Agrego iconos en el main

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atlas+</title>
     <link rel="stylesheet" href="../css/style.css">
+    <!-- cdn icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="envoltorio-pagina">
@@ -21,7 +23,22 @@
             </div>
         </header>
         <main>
-
+            <section class="icon-container">
+                <div class="icon-content">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-dumbbell"></i>
+                    </div>
+                    <p>Diseña rutinas según tus objetivos</p>
+                </div>
+                <div class="icon-content">
+                    <div class="icon-circle"><i class="fa-solid fa-calendar-days"></i></div>
+                    <p>Organiza tu semana</p>
+                </div>
+                <div class="icon-content">
+                    <div class="icon-circle"><i class="fa-solid fa-bowl-food"></i></div>
+                    <p>Sigue tu dieta con precisión</p>
+                </div>
+            </section>
         </main>
         <footer>
             <div class="container-contenido-footer">
