nueva seccion 'quienes somos' y nuevos cambios

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atlas+</title>
+    <title>Inicio | Atlas+</title>
     <link rel="stylesheet" href="../css/style.css">
     <!-- cdn icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,15 +12,18 @@
 <body>
     <div class="envoltorio-pagina">
         <header>
-            <h1 class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</h1>
+            <a href="index.html" class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</a>
             <div class="container-contenido-header">
                 <div class="home-link">
-                    <a class="txt-home" href="#home" alt="Volver a la página principal">Home</a>
+                    <a class="txt-home" href="quienes_somos.html" alt="Volver a la página principal">Quienes Somos</a>
                 </div>
                 <div class="dashboardLink">
                     <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre la marca Atlas">Dashboard</a>
                 </div>
-                <button class="btn-rutinas" href="#rutinas" alt="Para pedir una rutina personalizada">Pedi tu rutina</button>    
+                <div class="dashboardLink">
+                    <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre seguir tu alimentacion">Alimentacion</a>
+                </div>
+                <button class="btn-rutinas" href="#rutinas" alt="Para pedir armar una rutina personalizada">Arma tu rutina</button>    
             </div>
         </header>
         <main>
