--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -9,7 +9,7 @@
 <body>
     <div class="envoltorio-pagina">
         <header>
-            <a href="index.html" class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</a>
+            <a href="../html/index.html" class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</a>
             <div class="container-contenido-header">
                 <div class="home-link">
                     <a class="txt-home" href="quienes_somos.html" alt="Volver a la página principal">Quienes Somos</a>
