--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -20,17 +20,18 @@
                 <div class="dashboardLink">
                     <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre la marca Atlas">Dashboard</a>
                 </div>
-                <div class="dashboardLink">
-                    <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre seguir tu alimentacion">Alimentacion</a>
+                <div class="alimentacionLink">
+                    <a class="txt-dashboard" href="#alimentacion" alt="Se habla sobre seguir tu alimentacion">Alimentacion</a>
                 </div>
                 <button class="btn-rutinas" href="#rutinas" alt="Para pedir armar una rutina personalizada">Arma tu rutina</button>    
             </div>
+                
         </header>
         <main>
             <section class="section-container">
                 <div class="div-container">
                     <div class="container-img" >
-                        <img src="https://media.istockphoto.com/id/2027278927/es/foto/joven-mujer-atl%C3%A9tica-haciendo-ejercicio-con-barra-durante-el-entrenamiento-deportivo-en-un.jpg?s=612x612&w=0&k=20&c=r9pa57g6zvU-keyNhqtZ7dBoWubAmXfMNn1VnXrZWhk=" alt="imagne entrenando">
+                        <img src="https://www.sportlife.es/uploads/s1/98/42/45/0/las-claves-del-exito-en-tu-entrenamiento.jpeg" alt="imagen entrenando">
                     </div>
                     <div class="container-info" >
                         <p class="container-info-text">Diseñá tu propio plan de entrenamiento y empezá a construir el cuerpo que siempre soñaste.
@@ -49,12 +50,12 @@
                         </div>
                     </div>
                     <div class="container-img" >
-                        <img src="https://media.istockphoto.com/id/2027278927/es/foto/joven-mujer-atl%C3%A9tica-haciendo-ejercicio-con-barra-durante-el-entrenamiento-deportivo-en-un.jpg?s=612x612&w=0&k=20&c=r9pa57g6zvU-keyNhqtZ7dBoWubAmXfMNn1VnXrZWhk=" alt="imagne entrenando">
+                        <img src="https://images.unsplash.com/photo-1734668487893-d686f3c8d0cf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGVudHJlbmFkb3IlMjBhcm1hbmRvJTIwcnV0aW5hfGVufDB8fDB8fHww" alt="imagen de entrenamiento">
                     </div>
                 </div>
                 <div class="div-container">
                     <div class="container-img" >
-                        <img src="https://media.istockphoto.com/id/2027278927/es/foto/joven-mujer-atl%C3%A9tica-haciendo-ejercicio-con-barra-durante-el-entrenamiento-deportivo-en-un.jpg?s=612x612&w=0&k=20&c=r9pa57g6zvU-keyNhqtZ7dBoWubAmXfMNn1VnXrZWhk=" alt="imagne entrenando">
+                        <img src="https://www.gndiario.com/sites/default/files/noticias/tuppers-comida-saludable.jpg" alt="imagen de comida saludable">
                     </div>
                     <div class="container-info" >
                         <p class="container-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
