Nuevo cambios en la seccion index, nuevo carrusel de imagenes

--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         <main>
-            <img class="quienes_somos-img" src="../imagenes/11.jpg" alt="Imagen utilizando Atlas+">
+            <img class="quienes_somos-img" src="../Media/11.jpg" alt="Imagen utilizando Atlas+">
             <section class="quienes_somos-seccion">
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
