Agregue informacion en los box del titulo Porque Elegirnos del archivo quienes_somos.html

--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos | Atlas</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <div class="envoltorio-pagina">
@@ -29,15 +31,27 @@
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, beatae alias. Quae nobis molestias exercitationem. Assumenda minus explicabo id provident distinctio possimus sed, tenetur libero quas error cumque debitis dolorum. <br><br> ipsum dolor sit amet consectetur adipisicing elit. Ad quos impedit expedita deserunt saepe, consequatur quasi quam repellendus ex earum, fuga voluptatum recusandae tempore eum atque maiores? Ratione, optio quam?Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br>Labore nisi aperiam laboriosam molestiae nulla laudantium aliquam amet consequuntur nihil aspernatur magnam veritatis ipsa ducimus, voluptatem sequi maiores ipsam dolorem totam!
+                        En Atlas+ creemos que el fitness va más allá del entrenamiento. Somos una plataforma dedicada a ayudarte a alcanzar tu mejor versión, física y mentalmente.<br><br> Nuestro equipo combina experiencia en entrenamiento, nutrición y bienestar para ofrecerte rutinas adaptadas a tus objetivos, organizarlas de manera eficiente y acompañarte con un plan de alimentación que potencie tus resultados.  <br><br> Tanto si estás comenzando como si buscás llevar tu entrenamiento al siguiente nivel, en Atlas+ encontrás la motivación, el conocimiento y la comunidad que necesitás para lograrlo. <br><br> Transformá tu rutina. Transformá tu vida. Bienvenido a Atlas+.
                     </p>
                 </div>
                 <div class="quienes_somos-second-box">
                     <h1 class="quienes_somos-h1">Porque Elegirnos</h1>
                     <div id="quienes_somos-second-contenedor">
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
+                        <div class="box">
+                            <h3>Rutinas hechas para vos</h3>
+                            <p>Entrenamientos personalizados que se adaptan a tu nivel, tus objetivos y tu ritmo de vida.</p>
+                            <i class="fas fa-dumbbell icono"></i>
+                        </div>
+                        <div class="box">
+                            <h3>Organización eficiente</h3>
+                            <p>Te ayudamos a planificar tu semana con una estructura clara de ejercicios y progresos.</p>
+                            <i class="fas fa-clipboard-list icono"></i>
+                        </div>    
+                        <div class="box">
+                            <h3>Dieta que<br>acompaña</h3>
+                            <p>Incluí una alimentación alineada con tu entrenamiento para obtener mejores resultados.</p>
+                            <i class="fas fa-bowl-food icono"></i>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -47,9 +61,9 @@
                 <h2 class="copyrightTeam" alt="Copyright 404 not found">404 not found</h2>
                     <div class="equipo-facultad">
                         <ul>Rodrigo Riera</ul>
-                            <ul>Tomas Diaz</ul>
-                            <ul>Tiago Nehuen Sedano</ul>
-                            <UL>Lucas Ferreira</UL>
+                        <ul>Tomas Diaz</ul>
+                        <ul>Tiago Nehuen Sedano</ul>
+                        <UL>Lucas Ferreira</UL>
                     </div>
             </div>
         </footer>
