--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- cdn Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -87,15 +88,15 @@
                     </div>
             </section>
         </main>
-        <footer>
-            <div class="container-contenido-footer">
+        <footer class="footer-seccion">
+            <div class="footer-container">
                 <h2 class="copyrightTeam" alt="Copyright 404 not found">404 not found</h2>
-                    <div class="equipo-facultad">
-                        <ul>Rodrigo Riera</ul>
-                        <ul>Tomas Diaz</ul>
-                        <ul>Tiago Nehuen Sedano</ul>
-                        <UL>Lucas Ferreira</UL>
-                    </div>
+                <div class="equipo-facultad">
+                    <ul>Rodrigo Riera</ul>
+                    <ul>Tomas Diaz</ul>
+                    <ul>Tiago Nehuen Sedano</ul>
+                    <ul>Lucas Ferreira</ul>
+                </div>
             </div>
         </footer>
     </div>
