--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos | Atlas</title>
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- cdn Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
     <div class="envoltorio-pagina">
@@ -26,7 +30,7 @@
             </div>
         </header>
         <main>
-            <img class="quienes_somos-img" src="../Media/11.jpg" alt="Imagen utilizando Atlas+">
+            <img class="quienes_somos-img" src="../Media/Quienes_Somos/imagen_portada.jpg" alt="Imagen utilizando Atlas+">
             <section class="quienes_somos-seccion">
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
@@ -48,7 +52,7 @@
                             <i class="fas fa-clipboard-list icono"></i>
                         </div>    
                         <div class="box">
-                            <h3>Dieta que<br>acompaña</h3>
+                            <h3>Dieta que acompaña</h3>
                             <p>Incluí una alimentación alineada con tu entrenamiento para obtener mejores resultados.</p>
                             <i class="fas fa-bowl-food icono"></i>
                         </div>
@@ -56,15 +60,15 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <div class="container-contenido-footer">
+        <footer class="footer-seccion">
+            <div class="footer-container">
                 <h2 class="copyrightTeam" alt="Copyright 404 not found">404 not found</h2>
-                    <div class="equipo-facultad">
-                        <ul>Rodrigo Riera</ul>
-                        <ul>Tomas Diaz</ul>
-                        <ul>Tiago Nehuen Sedano</ul>
-                        <UL>Lucas Ferreira</UL>
-                    </div>
+                <div class="equipo-facultad">
+                    <ul>Rodrigo Riera</ul>
+                    <ul>Tomas Diaz</ul>
+                    <ul>Tiago Nehuen Sedano</ul>
+                    <ul>Lucas Ferreira</ul>
+                </div>
             </div>
         </footer>
     </div>
