cambio nombre de clase 'container' --> 'tarjeta'

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -56,35 +56,35 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <section class="section-container">
-                <div class="div-container">
-                    <div class="container-img" >
+            <section class="tarjeta-section">
+                <div class="tarjeta">
+                    <div class="tarjeta-img" >
                         <img src="https://www.sportlife.es/uploads/s1/98/42/45/0/las-claves-del-exito-en-tu-entrenamiento.jpeg" alt="imagen entrenando">
                     </div>
-                    <div class="container-info" >
-                        <p class="container-info-text">Diseñá tu propio plan de entrenamiento y empezá a construir el cuerpo que siempre soñaste.
+                    <div class="tarjeta-info" >
+                        <p class="tarjeta-info-text">Diseñá tu propio plan de entrenamiento y empezá a construir el cuerpo que siempre soñaste.
                         ¡No esperes más para dar el primer paso hacia tu mejor versión!</p>
-                        <button class="container-btn">ARMA TU RUTINA</button>
+                        <button class="tarjeta-info-btn">ARMA TU RUTINA</button>
                     </div>
                 </div>
-                <div class="div-container">
-                    <div class="container-info">
-                        <p class="container-info-text">Tomá el control de tu tiempo y progresá de forma constante con una rutina adaptada a vos.
+                <div class="tarjeta">
+                    <div class="tarjeta-info">
+                        <p class="tarjeta-info-text">Tomá el control de tu tiempo y progresá de forma constante con una rutina adaptada a vos.
                         ¡Entrená con propósito y alcanzá resultados reales!</p>
-                        <button class="container-btn">ORGANIZA TU RUTINA</button>
+                        <button class="tarjeta-info-btn">ORGANIZA TU RUTINA</button>
                     </div>
-                    <div class="container-img" >
+                    <div class="tarjeta-img" >
                         <img src="https://images.unsplash.com/photo-1734668487893-d686f3c8d0cf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGVudHJlbmFkb3IlMjBhcm1hbmRvJTIwcnV0aW5hfGVufDB8fDB8fHww" alt="imagen de entrenamiento">
                     </div>
                 </div>
-                <div class="div-container">
-                    <div class="container-img" >
+                <div class="tarjeta">
+                    <div class="tarjeta-img" >
                         <img src="https://www.gndiario.com/sites/default/files/noticias/tuppers-comida-saludable.jpg" alt="imagen de comida saludable">
                     </div>
-                    <div class="container-info" >
-                        <p class="container-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
+                    <div class="tarjeta-info" >
+                        <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
                         ¡La constancia en la dieta es clave para transformar tu cuerpo!</p>
-                        <button class="container-btn">SEGUI TU DIETA</button>
+                        <button class="tarjeta-info-btn">SEGUI TU DIETA</button>
                     </div>
             </section>
         </main>
