--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -13,22 +13,26 @@
 </head>
 <body>
     <div class="envoltorio-pagina">
-        <header>
-            <a href="index.html" class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</a>
-            <div class="container-contenido-header">
-                <div class="home-link">
-                    <a class="txt-home" href="quienes_somos.html" alt="Volver a la página principal">Quienes Somos</a>
-                </div>
-                <div class="dashboardLink">
-                    <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre la marca Atlas">Dashboard</a>
-                </div>
-                <div class="alimentacionLink">
-                    <a class="txt-dashboard" href="#alimentacion" alt="Se habla sobre seguir tu alimentacion">Alimentacion</a>
-                </div>
-                <button class="btn-rutinas" href="#rutinas" alt="Para pedir armar una rutina personalizada">Arma tu rutina</button>    
-            </div>
-                
-        </header>
+<header>
+  <a href="index.html" class="txt-atlas" aria-label="Texto de la marca de la página llamada Atlas+">Atlas+</a>
+
+  <nav class="container-contenido-header" aria-label="Navegación principal">
+    <ul>
+      <li class="nav-link">
+        <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
+      </li>
+      <li class="nav-dashboard">
+        <a class="txt-dashboard" href="#dashboard">Dashboard</a>
+      </li>
+      <li class="nav-alimentacion">
+        <a class="txt-dashboard" href="#alimentacion">Alimentación</a>
+      </li>
+      <li>
+        <a class="nav-rutinas-btn" href="#rutinas">Armá tu rutina</a>
+      </li>
+    </ul>
+  </nav>
+</header>
         <main>
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
