--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos | Atlas</title>
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- cdn Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
     <div class="envoltorio-pagina">
-        <header>
-            <a href="../html/index.html" class="txt-atlas" alt="Texto de la marca de la página llamada Atlas+">Atlas+</a>
-            <div class="container-contenido-header">
-                <div class="home-link">
-                    <a class="txt-home" href="quienes_somos.html" alt="Volver a la página principal">Quienes Somos</a>
-                </div>
-                <div class="dashboardLink">
-                    <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre la marca Atlas">Dashboard</a>
-                </div>
-                <div class="dashboardLink">
-                <a class="txt-dashboard" href="#dashboard" alt="Se habla sobre seguir tu alimentacion">Alimentacion</a>
-                </div>
-                <button class="btn-rutinas" href="#rutinas" alt="Para pedir armar una rutina personalizada">Arma tu rutina</button>    
-            </div>
+        <header class="header" id="header">
+        <a href="index.html" class="txt-atlas" aria-label="Texto de la marca de la página llamada Atlas+">Atlas+</a>
+
+        <nav class="container-contenido-header" aria-label="Navegación principal">
+            <ul>
+                <li class="nav-link">
+                    <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
+                </li>
+                <li class="nav-dashboard">
+                    <a class="txt-dashboard" href="#dashboard">Dashboard</a>
+                </li>
+                <li class="nav-alimentacion">
+                    <a class="txt-dashboard" href="#alimentacion">Alimentación</a>
+                </li>
+                <li>
+                    <a class="nav-rutinas-btn" href="#rutinas">Armá tu rutina</a>
+                </li>
+            </ul>
+        </nav>
         </header>
         <main>
-            <img class="quienes_somos-img" src="../Media/11.jpg" alt="Imagen utilizando Atlas+">
+            <img class="quienes_somos-img" src="../Media/Quienes_Somos/imagen_portada.jpg" alt="Imagen utilizando Atlas+">
             <section class="quienes_somos-seccion">
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
@@ -48,7 +57,7 @@
                             <i class="fas fa-clipboard-list icono"></i>
                         </div>    
                         <div class="box">
-                            <h3>Dieta que<br>acompaña</h3>
+                            <h3>Dieta que acompaña</h3>
                             <p>Incluí una alimentación alineada con tu entrenamiento para obtener mejores resultados.</p>
                             <i class="fas fa-bowl-food icono"></i>
                         </div>
@@ -56,17 +65,18 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <div class="container-contenido-footer">
+        <footer class="footer-seccion">
+            <div class="footer-container">
                 <h2 class="copyrightTeam" alt="Copyright 404 not found">404 not found</h2>
-                    <div class="equipo-facultad">
-                        <ul>Rodrigo Riera</ul>
-                        <ul>Tomas Diaz</ul>
-                        <ul>Tiago Nehuen Sedano</ul>
-                        <UL>Lucas Ferreira</UL>
-                    </div>
+                <div class="equipo-facultad">
+                    <ul>Rodrigo Riera</ul>
+                    <ul>Tomas Diaz</ul>
+                    <ul>Tiago Nehuen Sedano</ul>
+                    <ul>Lucas Ferreira</ul>
+                </div>
             </div>
         </footer>
     </div>
+    <script src="../js/main.js"></script>
 </body>
 </html>
