--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -19,14 +19,11 @@
             <a href="index.html" class="txt-atlas" aria-label="Texto de la marca de la página llamada Atlas+">Atlas+</a>
             <nav class="container-contenido-header" aria-label="Navegación principal">
                 <ul class="nav_list" id="nav-list">
+                    <li>
+                        <a class="txt-home" href="index.html">Inicio</a>
+                    </li>
                     <li class="nav-link">
                         <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
-                    </li>
-                    <li class="nav-dashboard">
-                        <a class="txt-dashboard" href="#dashboard">Dashboard</a>
-                    </li>
-                    <li class="nav-alimentacion">
-                        <a class="txt-dashboard" href="#alimentacion">Alimentación</a>
                     </li>
                     <li>
                         <a class="nav-rutinas-btn" href="#rutinas">Armá tu rutina</a>
