Agrego nuevos cambios al frontend y una nueva página de rutinas

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -26,7 +26,7 @@
                         <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
                     </li>
                     <li>
-                        <a class="nav-rutinas-btn" href="#rutinas">Armá tu rutina</a>
+                        <a class="nav-rutinas-btn" href="rutinas_alimentacion.html">Armá tu rutina</a>
                     </li>
                 </ul>
             </nav>
@@ -65,11 +65,12 @@
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Diseñá tu propio plan de entrenamiento y empezá a construir el cuerpo que siempre soñaste.
                         ¡No esperes más para dar el primer paso hacia tu mejor versión!</p>
-                        <button class="tarjeta-info-btn">ARMA TU RUTINA</button>
+                        <button class="tarjeta-info-btn" onclick="window.location.href='rutinas_alimentacion.html'">ARMA TU RUTINA</button>
                     </div>
                     <div class="tarjeta-info">
                         <p class="tarjeta-info-text">Tomá el control de tu tiempo y progresá de forma constante con una rutina adaptada a vos.
                         ¡Entrená con propósito y alcanzá resultados reales!</p>
+                        <!-- Hay que cambiar esto y el linkeo ! -->
                         <button class="tarjeta-info-btn">ORGANIZA TU RUTINA</button>
                     </div>
                     <div class="tarjeta-img" >
