--- a/Proyecto TP/frontend/html/quienes_somos.html
+++ b/Proyecto TP/frontend/html/quienes_somos.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes Somos | Atlas</title>
+    <title>Quienes Somos | Atlas+</title>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- cdn Boostrap -->
@@ -25,7 +26,7 @@
                     <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
                 </li>
                 <li>
-                    <a class="nav-rutinas-btn" href="#rutinas">Armá tu rutina</a>
+                    <a class="nav-rutinas-btn" href="rutinas_alimentacion.html">Armá tu rutina</a>
                 </li>
             </ul>
         </nav>
