Agregue una nueva tabla, conecte la base de datos y los endpoints y ademas corregi un minimo detalle en un parrafo del frontend

--- a/Proyecto TP/frontend/html/rutinas_alimentacion.html
+++ b/Proyecto TP/frontend/html/rutinas_alimentacion.html
@@ -50,7 +50,7 @@
                     <h2 class="titulo-alimentacion" id="tituloAlimentacion">Rastrea tus calorías</h2>
                     <p class="alimentacion-texto" id="alimentacionTxt">
                         Arranca a rastrear tus calorías con nuestro sistema inteligente y segui 
-                        tu aliementación en base a tus objetivos. Arranca ahora!
+                        tu alimentación en base a tus objetivos. Arranca ahora!
                     </p>
                     <div class="boton-container" id="botonContainer">
                         <button class="alimentacion-boton" id="alimentacionBoton">Comenza ahora!</button>
