modifique la seaccion de ejercicios.html ya que al momento de hacer la consulta a la db y traer los ejercicios, los grupos musculares los traia con los ID, ahora estan los nombres de los grupos musculares.

--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -39,7 +39,7 @@
                 const newRow = document.createElement("tr");
 
                 const grupoMuscular = document.createElement("td");
-                grupoMuscular.innerHTML = ej.grupo_muscular_id ?? "-"; 
+                grupoMuscular.innerHTML = ej.grupo_muscular ?? "-"; 
                 newRow.appendChild(grupoMuscular);
 
                 const ejercicio = document.createElement("td");
