Solucione lo de porque no aparecian los valores en la columna Duracion y ademas agregue valores de la columna Series asi ya quedan

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -49,7 +49,7 @@
                     newRow.appendChild(NivelUsuario);
 
                     const Duracion = document.createElement("td"); // Duracion
-                    Duracion.innerHTML = Entrenamiento.duracion ?? "-";
+                    Duracion.innerHTML = Entrenamiento.duracion_minutos ?? "-";
                     newRow.appendChild(Duracion);
 
                     const Descripcion = document.createElement("td"); // Descripcion
