--- a/Proyecto TP/frontend/html/rutinas_alimentacion.html
+++ b/Proyecto TP/frontend/html/rutinas_alimentacion.html
@@ -40,8 +40,8 @@
                         que podes realizar en el gimnasio o en tu casa.
                     </p>
                     <div class="boton-container" id="botonContainer">
-                        <button class="rutina-boton" id="rutinaGym">Gimnasio</button>
-                        <button class="rutina-boton" id="rutinaCasa">Casa</button>
+                        <button class="rutina-boton" id="rutinaGym"><a href="arma_rutina.html">Gimnasio</a></button>
+                        <!-- <button class="rutina-boton" id="rutinaCasa">Casa</button> -->
                     </div>                   
                 </div>
             </section>
